# svelte-tauri-template

./: .gitignore  ADP_INTEGRATION.md  AUTO_UPDATE_SETUP.md  CHANGELOG.md  CI_CD_SETUP.md  CODE_SIGNING.md  DISTRIBUTION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MOBILE_SETUP.md  PACKAGE_STRATEGY.md  README.md  README_TEMPLATE.md  RELEASE_WORKFLOW.md  TEMPLATE_SUMMARY.md  TEMPLATE_USAGE.md  TESTFLIGHT_SETUP.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: android-build.yml  copilot-pr-lifecycle.yml  desktop-build.yml  e2e.yml  ios-build.yml  pr-lane-event-relay.yml  release.yml  tech-doc-writer.yml  ui-compliance.yml  update-manifest.yml
cli/: bootstrap.js  plugin-add.js  plugin-info.js  plugin-list.js  plugin-remove.js
docs/: ARCHITECTURE.md  CI_CD.md  CODE_SIGNING.md  DESIGN.md  DISTRIBUTION.md  GOTCHAS.md  INFRA-DEBT.md  MOBILE.md  README.md  RELEASE.md  ROADMAP.md  SECRETS_MANAGEMENT.md  SUMMARY.md  TAURI_SETUP.md  USAGE.md
e2e/: smoke.spec.ts
plugins/adp/: install.js  manifest.json
plugins/fsm/: manifest.json
plugins/pluresdb/: README.md  manifest.json  package.json
plugins/praxis/: install.js  manifest.json
plugins/state-docs/: manifest.json
scripts/: bump-version.js  generate-update-manifest.js  update-changelog.js
src/: app.html
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
template/: .gitignore  package.json  svelte.config.js
(+23 files in other folders)
